Мелкие правки для Travis